add: env file (switch dev,prod)

--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "cross-env NODE_ENV=\"development\" next dev",
+    "build": "cross-env NODE_ENV=\"production\" next build",
+    "start": "cross-env NODE_ENV=\"production\" next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "cross-env": "^7.0.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "next": "13.0.4",
